# rusland

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/: 20260713075818_foundation.sql
src/: main.rs
src/configs/: mod.rs
src/logger/: mod.rs
web/: 404.html  index.html
